<resources>
    <string name="app_name">Investment portfolio</string>
    <string name="spinner_name">Выберите компанию</string>
    <string name="recycler_view_text">Заполните портфель</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="start_me">Запусти меня</string>
    <!--FRAGMENT DIALOG-->
    <string name="now_price_static_textview">Текущая цена, руб.</string>
    <string name="now_price_editable_textview">10000</string>
    <string name="hint_input_amount">Количество</string>
    <string name="hint_input_price">Цена</string>
    <string name="btn_buy">купить</string>
    <string name="btn_sell">продать</string>
</resources>
