<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/now_price_static_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/now_price_static_textview"
                android:layout_weight="1"
                android:gravity="center" android:textSize="18sp"/>
        <TextView
                android:text="@string/now_price_editable_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/now_price_editable_textview"
                android:layout_weight="2"
                android:gravity="center" android:textSize="18sp"/>
    </LinearLayout>
    <com.rengwuxian.materialedittext.MaterialEditText
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/amount" android:hint="@string/hint_input_amount" android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
    <com.rengwuxian.materialedittext.MaterialEditText
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/price" android:hint="@string/hint_input_price" android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
    <Button
            android:text="@string/btn_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button"/>
</LinearLayout>