<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.rengwuxian.materialedittext.MaterialEditText
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/amount" android:hint="@string/hint_input_amount"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/price" android:hint="@string/hint_input_price"/>

    <Button
            android:text="@string/btn_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button"/>
</LinearLayout>